--- a/HelloPXL/AppShell.xaml
+++ b/HelloPXL/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:HelloPXL"
+    xmlns:pages="clr-namespace:HelloPXL.Pages"
     Shell.FlyoutBehavior="Disabled"
     Title="HelloPXL">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate pages:HomePage}"
         Route="MainPage" />
 
 </Shell>
