--- a/HelloPXL/AppShell.xaml
+++ b/HelloPXL/AppShell.xaml
@@ -4,13 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:HelloPXL"
-    xmlns:pages="clr-namespace:HelloPXL.Pages"
     Shell.FlyoutBehavior="Disabled"
     Title="HelloPXL">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:HomePage}"
+        ContentTemplate="{DataTemplate pages:MainPage}"
         Route="MainPage" />
 
 </Shell>
