Fix ContentTemplate binding in AppShell.xaml

--- a/HelloPXL/AppShell.xaml
+++ b/HelloPXL/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate pages:MainPage}"
+        ContentTemplate="{DataTemplate MainPage}"
         Route="MainPage" />
 
 </Shell>
